optional debug for the pelican action

--- a/pelican/action.yml
+++ b/pelican/action.yml
@@ -17,6 +17,10 @@ inputs:
     description: "Temporary Directory name"
     required: false
     default: '.output.tmp'
+  debug:
+    description: "Pelican Debug mode"
+    required: false
+    default: 'false'
 runs:
   using: "composite"
   steps:
@@ -39,6 +43,14 @@ runs:
       shell: bash
       env: # in case we are using GFM (otherwise ignored)
         LIBCMARKDIR: "cmark-gfm-0.28.3.gfm.12/lib"
+      if: ${{ inputs.debug == 'true' }}
+
+    - name: Generate website from markdown
+      run: /usr/bin/env python3 -m pelican content -o ${{ inputs.tempdir }}
+      shell: bash
+      env: # in case we are using GFM (otherwise ignored)
+        LIBCMARKDIR: "cmark-gfm-0.28.3.gfm.12/lib"
+      if: ${{ inputs.debug == 'false' }}
 
     - name: Check out previous branch
       shell: bash
