--- a/pelican/action.yml
+++ b/pelican/action.yml
@@ -21,11 +21,15 @@ inputs:
     description: "Pelican Debug mode"
     required: false
     default: 'false'
+  version:
+    description: "Pelican Version (default 4.5.4)"
+    required: false
+    default: '4.5.4'
 runs:
   using: "composite"
   steps:
     - name: Install Pelican
-      run: pip3 install --force-reinstall pelican==4.8.0 markdown ghp-import bs4 ezt requests
+      run: pip3 install --force-reinstall pelican==${{ inputs.version }} markdown ghp-import bs4 ezt requests
       shell: bash
 
     # If the site uses Github Flavored Markdown, use this build branch
