--- a/pelican/action.yml
+++ b/pelican/action.yml
@@ -22,9 +22,10 @@ inputs:
     required: false
     default: 'false'
   version:
-    description: "Pelican Version (default 4.5.4)"
+    # Temporarily revert to 4.8.0; earlier version now fails
+    description: "Pelican Version (default 4.8.0)"
     required: false
-    default: '4.5.4'
+    default: '4.8.0'
 runs:
   using: "composite"
   steps:
