--- a/pelican/action.yml
+++ b/pelican/action.yml
@@ -73,7 +73,7 @@ runs:
         fi
         echo "Getting plugins from action location: ${{ github.action_path }}"
         PP=$(python3 ${{ github.action_path }}/plugin_paths.py '${{ github.action_path }}/plugins')
-        /usr/bin/env python3 -m pelican content -e "$PP" -o ${{ inputs.tempdir }} $OPTS
+        /usr/bin/env python3 -B -m pelican content -e "$PP" -o ${{ inputs.tempdir }} $OPTS
       shell: bash
       env: # in case we are using GFM (otherwise ignored)
         LIBCMARKDIR: "../cmark-gfm-0.28.3.gfm.12/lib"
