gfm is true by default

--- a/pelican/action.yml
+++ b/pelican/action.yml
@@ -8,7 +8,7 @@ inputs:
   gfm:
     description: "Uses GitHub Flavored Markdown"
     required: false
-    default: 'false'
+    default: 'true'
   output:
     description: "Pelican generated output directory"
     required: false
