--- a/pelican/migration/build-pelican.yml
+++ b/pelican/migration/build-pelican.yml
@@ -1,6 +1,9 @@
 name: Build a Pelican Website
 on:
   push:
+    # This prevents the workflow from running automatically on a new branch
+    # When creating a new site branch, please ensure that the push and checkout branches agree
+    # and that the action/pelican destination value is updated accordingly
     branches: [ "SOURCE_BRANCH" ]
   workflow_dispatch:
 jobs:
@@ -10,8 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          # This must equal the push/branches list above, and be appropriate for the destination below
           ref: 'SOURCE_BRANCH'
       - uses: apache/infrastructure-actions/pelican@main
         with:
+          # This must be appropriate for the branch being built
           destination: 'DESTINATION_BRANCH'
           gfm: 'true'
