--- a/.github/workflows/pelican-action-test.yml
+++ b/.github/workflows/pelican-action-test.yml
@@ -6,10 +6,10 @@ jobs:
   pelican-test:
     env: # source and target branches
       SOURCE: testsite
-      TARGET: testsite-${{ github.ref }} # each branch has own test output
+      TARGET: testsite-${{ github.ref_name }} # each branch has own test output
     runs-on: ubuntu-latest
     concurrency: # target must not be updated by two jobs at once
-      group: testsite-${{ github.ref }}
+      group: testsite-${{ github.ref_name }} # must agree with TARGET
     steps:
       - name: Checkout the test site
         uses: actions/checkout@v4
