--- a/.asf.yaml
+++ b/.asf.yaml
@@ -5,4 +5,4 @@ github:
 notifications:
   commits: commits@infra.apache.org
   issues: issues@infra.apache.org
-  pullrequests: private@infra.apache.org
+  pullrequests: commits@infra.apache.org
