--- a/.github/workflows/pelican-action-test.yml
+++ b/.github/workflows/pelican-action-test.yml
@@ -1,6 +1,8 @@
 name: Test the Pelican build action
 on:
   push:
+    paths-ignore:
+      - '**/linting.yml'
   workflow_dispatch:
 jobs:
   pelican-test:
