--- a/pelican/action.yml
+++ b/pelican/action.yml
@@ -25,6 +25,10 @@ inputs:
     description: "Pelican Version (default 4.5.4)"
     required: false
     default: '4.5.4'
+  fatal:
+    description: "Value for --fatal option [errors|warnings] - sets exit code to error (default: errors)"
+    required: false
+    default: 'errors'
 runs:
   using: "composite"
   steps:
@@ -73,6 +77,10 @@ runs:
           OPTS='-D'
         else
           OPTS=''
+        fi
+        if [ -n "${{ inputs.fatal }}" ]
+        then
+          OPTS="$OPTS --fatal ${{ inputs.fatal }}"
         fi
         echo "Getting plugins from action location: ${{ github.action_path }}"
         PP=$(python3 ${{ github.action_path }}/plugin_paths.py '${{ github.action_path }}/plugins')
