--- a/pelican/action.yml
+++ b/pelican/action.yml
@@ -84,6 +84,7 @@ runs:
         fi
         echo "Getting plugins from action location: ${{ github.action_path }}"
         PP=$(python3 ${{ github.action_path }}/plugin_paths.py '${{ github.action_path }}/plugins')
+        set -x # Show the expanded variables
         python3 -B -m pelican content -e "$PP" -o ${{ inputs.tempdir }} $OPTS
 
     - name: Check out previous branch
