Add pelican --fatal option

--- a/.github/workflows/pelican-action-test.yml
+++ b/.github/workflows/pelican-action-test.yml
@@ -39,6 +39,7 @@ jobs:
         with:
           destination: ${{ env.TARGET }}
           gfm: 'true'
+          # fatal: 'errors' (default)
         env:
           UNIT_TEST_A: This is UNIT_TEST_A
       - name: Check ${{ env.TARGET }} was created
@@ -64,6 +65,7 @@ jobs:
         with:
           destination: ${{ env.TARGET }}
           gfm: 'true'
+          fatal: 'warnings'
         env: # This is a different value
           UNIT_TEST_A: This is UNIT_TEST_A updated
       - name: Check ${{ env.TARGET }} is present and has been updated
@@ -86,6 +88,7 @@ jobs:
         with:
           destination: ${{ env.TARGET }}
           gfm: 'true'
+          fatal: '' # should ignore it
         env: # This is the same value
           UNIT_TEST_A: This is UNIT_TEST_A updated
       - name: Check ${{ env.TARGET }} is present and has not been updated
