Only run when relevant files change

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,8 +1,10 @@
 name: Linting and MyPy (Pelican)
 on:
   push:
-    paths-ignore:
-      - '**/pelican-action-test.yml'
+    paths:
+      - '**.py'
+      - '**/linting.yml'
+      - '**/pylintrc'
   workflow_dispatch:
 
 jobs:
