--- a/pelican/action.yml
+++ b/pelican/action.yml
@@ -51,18 +51,53 @@ runs:
     # If the site uses Github Flavored Markdown, use this build branch
     - name: fetch and build libcmark-gfm.so
       if: ${{ inputs.gfm == 'true' }}
+      id: build_gfm
       shell: bash
       env:
         WORKDIR: /opt/pelican-asf # where to build GFM
         GFM_VERSION: '0.28.3.gfm.12' # ensure we agree with build-cmark.sh script
+        GITHUB_ACTION_REPO: ${{ github.action_repository }} # only works in the env context; empty for local action call
+        GH_TOKEN: ${{ github.token }} # needed by gh
       run: |
+        # Needs to be available to a subsequent step
+        echo  "GFM_VERSION=${GFM_VERSION}" >>$GITHUB_ENV
+        if [[ -z $LIBCMARKDIR ]] # don't overwrite LIBCMARKDIR if it exists
+        then
+          # set up the GFM environment
+          export LIBCMARKDIR=${WORKDIR}/cmark-gfm-${GFM_VERSION}/lib
+          echo  "LIBCMARKDIR=${WORKDIR}/cmark-gfm-${GFM_VERSION}/lib" >>$GITHUB_ENV
+        fi
         # Does the GFM build already exist?
-        if [[ -n $LIBCMARKDIR && -d $LIBCMARKDIR ]]
+        if [[ -d $LIBCMARKDIR ]]
         then
           echo "Already have GFM binary at $LIBCMARKDIR, skipping build"
           exit 0 # nothing more to do in this step
         fi
+        # Is there a saved artifact for the GFM build?
+
+        REPO=${{ github.repository }} # Check calling repo for artifact
+        echo "Check for GFM build artifact in current repo: $REPO"
+        gh run download --dir ${LIBCMARKDIR} --name cmark-gfm-${GFM_VERSION} --repo $REPO || true
+        if [[ -d $LIBCMARKDIR ]]
+        then
+          echo "Found ${LIBCMARKDIR} in $REPO, nothing more to do!"
+          exit 0 # nothing more to do in this step
+        fi
+
+        if [[ -n $GITHUB_ACTION_REPO ]]  # Check action repo for artifact
+        then
+          echo "Check for GFM build artifact in action repo: $GITHUB_ACTION_REPO"
+          gh run download --dir ${LIBCMARKDIR} --name cmark-gfm-${GFM_VERSION} --repo $GITHUB_ACTION_REPO || true
+          if [[ -d $LIBCMARKDIR ]]
+          then
+            echo "Found ${LIBCMARKDIR} in $GITHUB_ACTION_REPO, nothing more to do!"
+            exit 0 # nothing more to do in this step
+          fi
+        fi
+
+        # GFM binary not found, need to build it
         {
+          echo "Creating GFM binary in ${LIBCMARKDIR}"
           # disable stdout unless debug is on
           if [ "${{ inputs.debug }}" == 'true' ]
           then
@@ -74,10 +109,16 @@ runs:
           mkdir -p $WORKDIR
           pushd $WORKDIR
             bash ${{ github.action_path }}/build-cmark.sh $GFM_VERSION
+            # Message to upload step
+            echo "created=${LIBCMARKDIR}" >> $GITHUB_OUTPUT
           popd
-          # ensure LIBCMARKDIR is defined for subsequent steps
-          echo "LIBCMARKDIR=${WORKDIR}/cmark-gfm-${GFM_VERSION}/lib"  >> $GITHUB_ENV
         }
+    - name: Save the GFM build
+      if: ${{ steps.build_gfm.outputs.created }}
+      uses: actions/upload-artifact@v4
+      with:
+        name: cmark-gfm-${{ env.GFM_VERSION}}
+        path: ${{ steps.build_gfm.outputs.created }}
 
     - name: Generate website from markdown
       shell: bash
