Don't make assumptions about directory name

--- a/pelican/action.yml
+++ b/pelican/action.yml
@@ -73,10 +73,12 @@ runs:
           # Don't pollute site checkout
           mkdir -p $WORKDIR
           pushd $WORKDIR
-            bash ${{ github.action_path }}/build-cmark.sh $GFM_VERSION
+            # build the code and define LIBCMARKDIR
+            bash ${{ github.action_path }}/build-cmark.sh $GFM_VERSION | grep "export LIBCMARKDIR" >/tmp/libcmarkdir.$$
+            source /tmp/libcmarkdir.$$
           popd
           # ensure LIBCMARKDIR is defined for subsequent steps
-          echo "LIBCMARKDIR=${WORKDIR}/cmark-gfm-${GFM_VERSION}/lib"  >> $GITHUB_ENV
+          echo "LIBCMARKDIR=${LIBCMARKDIR}"  >> $GITHUB_ENV
         }
 
     - name: Generate website from markdown
