--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -14,7 +14,7 @@ on:
     - cron: '11 12 * * 0'
   push:
     paths:
-      - '**/build-artifact.yml'
+      - '**/build-artifacts.yml' # self
       - 'pelican/build-cmark.sh'
   workflow_dispatch:
 
