--- a/pelican/action.yml
+++ b/pelican/action.yml
@@ -70,9 +70,13 @@ runs:
         if [[ -z $LIBCMARKDIR ]] # don't overwrite LIBCMARKDIR if it exists
         then
           # set up the GFM environment
-          NOBUILD=1 bash ${{ github.action_path }}/build-cmark.sh $GFM_VERSION | grep "export LIBCMARKDIR" >/tmp/libcmarkdir1.$$
-          source /tmp/libcmarkdir1.$$
-          echo  "LIBCMARKDIR=${LIBCMARKDIR}" >>$GITHUB_ENV
+          # Don't pollute site checkout
+          mkdir -p $WORKDIR
+          pushd $WORKDIR >/dev/null # ensure LIBCMARKDIR is under WORKDIR
+            NOBUILD=1 bash ${{ github.action_path }}/build-cmark.sh $GFM_VERSION | grep "export LIBCMARKDIR" >/tmp/libcmarkdir1.$$
+            source /tmp/libcmarkdir1.$$
+            echo  "LIBCMARKDIR=${LIBCMARKDIR}" >>$GITHUB_ENV
+          popd >/dev/null
         fi
         # Does the GFM build already exist?
         if [[ -d $LIBCMARKDIR ]]
