--- a/pelican/action.yml
+++ b/pelican/action.yml
@@ -72,11 +72,11 @@ runs:
           # set up the GFM environment
           # Don't pollute site checkout
           mkdir -p $WORKDIR
-          pushd $WORKDIR >/dev/null # ensure LIBCMARKDIR is under WORKDIR
-            NOBUILD=1 bash ${{ github.action_path }}/build-cmark.sh $GFM_VERSION | grep "export LIBCMARKDIR" >/tmp/libcmarkdir1.$$
-            source /tmp/libcmarkdir1.$$
-            echo  "LIBCMARKDIR=${LIBCMARKDIR}" >>$GITHUB_ENV
-          popd >/dev/null
+          # ensure LIBCMARKDIR is under WORKDIR
+          NOBUILD=1 bash ${{ github.action_path }}/build-cmark.sh $GFM_VERSION $WORKDIR $WORKDIR |\
+            grep "export LIBCMARKDIR" >/tmp/libcmarkdir1.$$
+          source /tmp/libcmarkdir1.$$
+          echo  "LIBCMARKDIR=${LIBCMARKDIR}" >>$GITHUB_ENV
         fi
         # Does the GFM build already exist?
         if [[ -d $LIBCMARKDIR ]]
@@ -104,13 +104,10 @@ runs:
           else
             exec >/dev/null
           fi
-          # Don't pollute site checkout
-          mkdir -p $WORKDIR
-          pushd $WORKDIR
-            # build the code and define LIBCMARKDIR
-            bash ${{ github.action_path }}/build-cmark.sh $GFM_VERSION | grep "export LIBCMARKDIR" >/tmp/libcmarkdir.$$
-            source /tmp/libcmarkdir.$$
-          popd
+          # build the code and define LIBCMARKDIR under $WORKDIR
+          bash ${{ github.action_path }}/build-cmark.sh $GFM_VERSION $WORKDIR $WORKDIR |\
+            grep "export LIBCMARKDIR" >/tmp/libcmarkdir.$$
+          source /tmp/libcmarkdir.$$
           # ensure LIBCMARKDIR is defined for subsequent steps
           echo "LIBCMARKDIR=${LIBCMARKDIR}"  >> $GITHUB_ENV
         }
